cleaned unused lines
Signed-off-by: Jeeva kandasamy <jkandasa@redhat.com>