@@ -66,8 +66,13 @@ public class TestReport {
         builder.append("   Tracers per pod         : ").append(CreateTraces.TRACERS_PER_POD).append("\n");
         builder.append("   Collector pod count     : ").append(envs.get("COLLECTOR_PODS")).append("\n");
         builder.append("   Collector queue size    : ").append(envs.get("COLLECTOR_QUEUE_SIZE")).append("\n");
+        builder.append("   Collector workers nums  : ").append(envs.get("COLLECTOR_NUM_WORKERS")).append("\n");
+        builder.append("   Query static files      : ").append(envs.get("QUERY_STATIC_FILES")).append("\n");
         builder.append("   Storage type            : ").append(envs.get("SPAN_STORAGE_TYPE")).append("\n");
         builder.append("   ES memory               : ").append(envs.get("ES_MEMORY")).append("\n");
+        builder.append("   ES bulk size            : ").append(envs.get("ES_BULK_SIZE")).append("\n");
+        builder.append("   ES bulk workers         : ").append(envs.get("ES_BULK_WORKERS")).append("\n");
+        builder.append("   ES bulk flush interval  : ").append(envs.get("ES_BULK_FLUSH_INTERVAL")).append("\n");
         builder.append("   Jaeger sampling rate    : ").append(CreateTraces.JAEGER_SAMPLING_RATE).append("\n");
         builder.append("   Jaeger flush interval   : ").append(CreateTraces.JAEGER_FLUSH_INTERVAL).append(" ms\n");
         builder.append("   Jaeger max queue size   : ").append(CreateTraces.JAEGER_MAX_QUEUE_SIZE).append("\n");
@@ -83,8 +88,8 @@ public class TestReport {
         builder.append("-----------------------------------------------------------------------\n\n");
 
         final double dropPercentage = 100.0 - (((double) spanCountFound / spanCountSent) * 100.0);
-        final int tracesPersecond = ((int) CreateTraces.THREAD_COUNT * (1000 / CreateTraces.DELAY))
-                * new Integer(envs.getOrDefault("WORKER_PODS", "1"));
+        final int tracesPersecond = Double.valueOf(((CreateTraces.THREAD_COUNT * (1000.0 / CreateTraces.DELAY))
+                * new Integer(envs.getOrDefault("WORKER_PODS", "1")))).intValue();
 
         builder.append("Traces count status: \n");
         builder.append("-----------------------------------------------------------------------\n");
